--- a/src/app/shared/components/sidenav-title-dashboard/sidenav-title-dashboard.component.html
+++ b/src/app/shared/components/sidenav-title-dashboard/sidenav-title-dashboard.component.html
@@ -1,5 +1,10 @@
 <div class="sidenav-title">
-	<a href="dashboard">
-		<img src="assets/images/logo.png" alt="logo" srcset="" />
+	<a routerLink="/dashboard" class="logo-link">
+		<img
+			src="assets/images/logo.png"
+			alt="MedControl Logo"
+			class="logo-image"
+		/>
+		<span class="logo-text">MedControl</span>
 	</a>
 </div>
