--- a/src/app/shared/components/sidenav-dashboard/sidenav-dashboard.component.html
+++ b/src/app/shared/components/sidenav-dashboard/sidenav-dashboard.component.html
@@ -1,127 +1,208 @@
-<div class="sidenav-container" [class.sidenav-collapsed]="isCollapsed">
-	<div class="toggle-collapse" (click)="toggleCollapse()">
-		<app-icon
-			[src]="'/assets/images/rotate-left.png'"
-			[alt]="'Collapse menu'"
-			[classes]="'h-4 w-4'"
-		/>
-	</div>
+<div
+	class="sidebar"
+	[class.mobile-open]="isMobileMenuOpen"
+	[class.collapsed]="isCollapsed"
+>
+	<button
+		class="sidebar-toggle"
+		[class.collapsed]="isCollapsed"
+		(click)="onToggleCollapse()"
+		aria-label="Recolher menu"
+	>
+		<svg width="12" height="12" viewBox="0 0 24 24" fill="currentColor">
+			<path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z" />
+		</svg>
+	</button>
 
-	<div class="sidenav-content">
+	<div class="sidebar-content">
 		<div class="menu-section">
-			<div class="menu-group">
-				<div class="menu-group-title">Principal</div>
-				<app-button-menu
-					[description]="'Dashboard'"
-					[selected]="menuSelected === 'Dashboard'"
-					(click)="onMenuSelected('Dashboard')"
-					[collapsed]="isCollapsed"
-				>
-					<app-icon
-						[src]="'/assets/images/dashboard-icon.svg'"
-						[alt]="'image dashboard'"
-						[classes]="'h-6 w-6 ml-2 mr-2'"
-					/>
-				</app-button-menu>
+			<div class="menu-group-title">Principal</div>
 
-				<app-button-menu
-					[description]="'Perfil'"
-					[selected]="menuSelected === 'Perfil'"
-					(click)="onMenuSelected('Perfil')"
-					[collapsed]="isCollapsed"
-				>
-					<app-icon
-						[src]="'/assets/images/perfil-icon.svg'"
-						[alt]="'image perfil'"
-						[classes]="'h-6 w-6 ml-2 mr-2'"
-					/>
-				</app-button-menu>
-			</div>
+			<a
+				routerLink="/dashboard"
+				class="menu-item"
+				[class.active]="menuSelected === 'Dashboard'"
+				(click)="onMenuSelected('Dashboard')"
+				data-tooltip="Dashboard"
+			>
+				<div class="menu-icon">
+					<svg
+						width="20"
+						height="20"
+						viewBox="0 0 24 24"
+						fill="currentColor"
+					>
+						<path
+							d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
+						/>
+					</svg>
+				</div>
+				<span class="menu-text">Dashboard</span>
+			</a>
 
-			<div class="menu-group">
-				<div class="menu-group-title">Medicamentos</div>
-				<app-button-menu
-					[description]="'Caixa de Medicamentos'"
-					[selected]="menuSelected === 'List Pillboxes'"
-					(click)="onMenuSelected('List Pillboxes')"
-					[collapsed]="isCollapsed"
-				>
-					<app-icon
-						[src]="'/assets/images/medication-icon.svg'"
-						[alt]="'image pillbox'"
-						[classes]="'h-6 w-6 ml-2 mr-2'"
-					/>
-				</app-button-menu>
-
-				<app-button-menu
-					[description]="'Medicamentos'"
-					[selected]="menuSelected === 'List Medications'"
-					(click)="onMenuSelected('List Medications')"
-					[collapsed]="isCollapsed"
-				>
-					<app-icon
-						[src]="'/assets/images/pill-icon.svg'"
-						[alt]="'image medications'"
-						[classes]="'h-6 w-6 ml-2 mr-2'"
-					/>
-				</app-button-menu>
-
-				<app-button-menu
-					[description]="'Relatório'"
-					[selected]="menuSelected === 'Report'"
-					(click)="onMenuSelected('Report')"
-					[collapsed]="isCollapsed"
-				>
-					<app-icon
-						[src]="'/assets/images/contact-page-icon.svg'"
-						[alt]="'image report'"
-						[classes]="'h-6 w-6 ml-2 mr-2'"
-					/>
-				</app-button-menu>
-			</div>
-
-			<div class="menu-group">
-				<div class="menu-group-title">Sistema</div>
-				<app-button-menu
-					[description]="'Configurações'"
-					[selected]="menuSelected === 'Settings'"
-					(click)="onMenuSelected('Settings')"
-					[collapsed]="isCollapsed"
-				>
-					<app-icon
-						[src]="'/assets/images/settings-icon.svg'"
-						[alt]="'image settings'"
-						[classes]="'h-6 w-6 ml-2 mr-2'"
-					/>
-				</app-button-menu>
-
-				<app-button-menu
-					[description]="'Suporte'"
-					[selected]="menuSelected === 'Support'"
-					(click)="onMenuSelected('Support')"
-					[collapsed]="isCollapsed"
-				>
-					<app-icon
-						[src]="'/assets/images/help-icon.svg'"
-						[alt]="'image help'"
-						[classes]="'h-6 w-6 ml-2 mr-2'"
-					/>
-				</app-button-menu>
-			</div>
+			<a
+				routerLink="/dashboard/perfil"
+				class="menu-item"
+				[class.active]="menuSelected === 'Perfil'"
+				(click)="onMenuSelected('Perfil')"
+				data-tooltip="Perfil"
+			>
+				<div class="menu-icon">
+					<svg
+						width="20"
+						height="20"
+						viewBox="0 0 24 24"
+						fill="currentColor"
+					>
+						<path
+							d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
+						/>
+					</svg>
+				</div>
+				<span class="menu-text">Perfil</span>
+			</a>
 		</div>
 
-		<app-button-menu
-			[description]="'Sair'"
-			[selected]="menuSelected === 'Logout'"
-			(click)="onMenuSelected('Logout')"
-			[collapsed]="isCollapsed"
-			[classes]="'mt-4'"
-		>
-			<app-icon
-				[src]="'/assets/images/logout-icon.svg'"
-				[alt]="'image logout'"
-				[classes]="'h-6 w-6 ml-2 mr-2'"
-			/>
-		</app-button-menu>
+		<div class="menu-section">
+			<div class="menu-group-title">Medicamentos</div>
+
+			<a
+				routerLink="/dashboard/pillboxes"
+				class="menu-item"
+				[class.active]="menuSelected === 'List Pillboxes'"
+				(click)="onMenuSelected('List Pillboxes')"
+				data-tooltip="Caixa de Medicamentos"
+			>
+				<div class="menu-icon">
+					<svg
+						width="20"
+						height="20"
+						viewBox="0 0 24 24"
+						fill="currentColor"
+					>
+						<path
+							d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-5 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"
+						/>
+					</svg>
+				</div>
+				<span class="menu-text">Caixa de Medicamentos</span>
+			</a>
+
+			<a
+				routerLink="/dashboard/medications"
+				class="menu-item"
+				[class.active]="menuSelected === 'List Medications'"
+				(click)="onMenuSelected('List Medications')"
+				data-tooltip="Medicamentos"
+			>
+				<div class="menu-icon">
+					<svg
+						width="20"
+						height="20"
+						viewBox="0 0 24 24"
+						fill="currentColor"
+					>
+						<path
+							d="M21,9V7l-3-2c-1.1,0-2,0.9-2,2v2c0,1.1,0.9,2,2,2h3V9z M12,2L6.5,6.5C6.19,6.81,6,7.23,6,7.66V16c0,2.21,1.79,4,4,4s4-1.79,4-4V7.66c0-0.43-0.19-0.85-0.5-1.16L12,2z"
+						/>
+					</svg>
+				</div>
+				<span class="menu-text">Medicamentos</span>
+			</a>
+
+			<a
+				routerLink="/dashboard/report"
+				class="menu-item"
+				[class.active]="menuSelected === 'Report'"
+				(click)="onMenuSelected('Report')"
+				data-tooltip="Relatório"
+			>
+				<div class="menu-icon">
+					<svg
+						width="20"
+						height="20"
+						viewBox="0 0 24 24"
+						fill="currentColor"
+					>
+						<path
+							d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20Z"
+						/>
+					</svg>
+				</div>
+				<span class="menu-text">Relatório</span>
+			</a>
+		</div>
+
+		<div class="menu-section">
+			<div class="menu-group-title">Sistema</div>
+
+			<a
+				routerLink="/dashboard/settings"
+				class="menu-item"
+				[class.active]="menuSelected === 'Settings'"
+				(click)="onMenuSelected('Settings')"
+				data-tooltip="Configurações"
+			>
+				<div class="menu-icon">
+					<svg
+						width="20"
+						height="20"
+						viewBox="0 0 24 24"
+						fill="currentColor"
+					>
+						<path
+							d="M19.14,12.94c0.04-0.3,0.06-0.61,0.06-0.94c0-0.32-0.02-0.64-0.07-0.94l2.03-1.58c0.18-0.14,0.23-0.41,0.12-0.61 l-1.92-3.32c-0.12-0.22-0.37-0.29-0.59-0.22l-2.39,0.96c-0.5-0.38-1.03-0.7-1.62-0.94L14.4,2.81c-0.04-0.24-0.24-0.41-0.48-0.41 h-3.84c-0.24,0-0.43,0.17-0.47,0.41L9.25,5.35C8.66,5.59,8.12,5.92,7.63,6.29L5.24,5.33c-0.22-0.08-0.47,0-0.59,0.22L2.74,8.87 C2.62,9.08,2.66,9.34,2.86,9.48l2.03,1.58C4.84,11.36,4.82,11.69,4.82,12s0.02,0.64,0.07,0.94l-2.03,1.58 c-0.18,0.14-0.23,0.41-0.12,0.61l1.92,3.32c0.12,0.22,0.37,0.29,0.59,0.22l2.39-0.96c0.5,0.38,1.03,0.7,1.62,0.94l0.36,2.54 c0.05,0.24,0.24,0.41,0.48,0.41h3.84c0.24,0,0.44-0.17,0.47-0.41l0.36-2.54c0.59-0.24,1.13-0.56,1.62-0.94l2.39,0.96 c0.22,0.08,0.47,0,0.59-0.22l1.92-3.32c0.12-0.22,0.07-0.47-0.12-0.61L19.14,12.94z M12,15.6c-1.98,0-3.6-1.62-3.6-3.6 s1.62-3.6,3.6-3.6s3.6,1.62,3.6,3.6S13.98,15.6,12,15.6z"
+						/>
+					</svg>
+				</div>
+				<span class="menu-text">Configurações</span>
+			</a>
+
+			<a
+				routerLink="/dashboard/support"
+				class="menu-item"
+				[class.active]="menuSelected === 'Support'"
+				(click)="onMenuSelected('Support')"
+				data-tooltip="Suporte"
+			>
+				<div class="menu-icon">
+					<svg
+						width="20"
+						height="20"
+						viewBox="0 0 24 24"
+						fill="currentColor"
+					>
+						<path
+							d="M11,18h2v-2h-2v2zm1-16C6.48,2,2,6.48,2,12s4.48,10,10,10s10-4.48,10-10S17.52,2,12,2z M13,13c0,0.55-0.45,1-1,1 s-1-0.45-1-1V9c0-0.55,0.45-1,1-1s1,0.45,1,1V13z"
+						/>
+					</svg>
+				</div>
+				<span class="menu-text">Suporte</span>
+			</a>
+		</div>
+
+		<div class="logout-section">
+			<a
+				href="#"
+				class="menu-item logout"
+				[class.active]="menuSelected === 'Logout'"
+				(click)="onMenuSelected('Logout')"
+				data-tooltip="Sair"
+			>
+				<div class="menu-icon">
+					<svg
+						width="20"
+						height="20"
+						viewBox="0 0 24 24"
+						fill="currentColor"
+					>
+						<path
+							d="M17,7L15.59,8.41L18.17,11H8V13H18.17L15.59,15.59L17,17L22,12L17,7M4,5H12V3H4A2,2 0 0,0 2,5V19A2,2 0 0,0 4,21H12V19H4V5Z"
+						/>
+					</svg>
+				</div>
+				<span class="menu-text">Sair</span>
+			</a>
+		</div>
 	</div>
 </div>
